zag-poc/tests/diag/e0002_total_panic.expected
error[E0002]: capability violation — `@total` constraint broken in function `bad_total`
  --> tests/diag/e0002_total_panic.zag:2:1
   |
2 | fn bad_total(x: i32, y: i32) i32 @total {
   | ^^^^^^^^^ effect occurs here
   = note: @total functions must not panic — guard all integer divisions at runtime
   = hint: guard all divisions (e.g. `if (d != 0)`) or remove the @total annotation
