zag-poc/tests/diag/e0002_total_panic.zag
// E0002: @total function must not panic
fn bad_total(x: i32, y: i32) i32 @total {
    return x / y;
}
